kubeflow/apps/pipelines/build/k8s/security.istio.io_v1beta1_authorizationpolicy_service-cache-server.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  annotations:
    internal.kpt.dev/upstream-identifier: security.istio.io|AuthorizationPolicy|kubeflow|service-cache-server
  labels:
    app.kubernetes.io/component: ml-pipeline
    app.kubernetes.io/name: kubeflow-pipelines
  name: service-cache-server
  namespace: kubeflow
spec:
  rules:
  - {}
  selector:
    matchLabels:
      app: cache-server
